--- a/Readme
+++ b/Readme
@@ -1,1 +1,2 @@
-Repo for various codes developed
+# Adaptive control Algoriths
+Algorithms for Modelling systems with uncertain dynamics, Disturbance Rejection, Force estimation and Adaptive control.
