--- a/Readme
+++ b/Readme
@@ -1,2 +1,2 @@
-# Adaptive control Algoriths
+# Adaptive_control_Algoriths
 Algorithms for Modelling systems with uncertain dynamics, Disturbance Rejection, Force estimation and Adaptive control.
